[metadata]
name = httpx-gssapi
description = A Python GSSAPI authentication handler for HTTPX
author = Ian Cordasco, Cory Benfield, Michael Komitee, Robbie Harwood, Roger Aiudi
author_email = aiudirog@gmail.com
url = https://github.com/pythongssapi/httpx-gssapi
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    httpx
    gssapi
    kerberos

[options]
include_package_data = True
python_requires = >=3.9
packages = httpx_gssapi
install_requires =
    httpx>=0.16,<0.28
    gssapi

[options.extras_require]
test =
    pytest
    k5test
all =
    %(test)s

[options.package_data]
* =
    LICENSE
    AUTHORS

[coverage:run]
source = .
include = httpx_gssapi/*,test_httpx_gssapi.py
omit = httpx_gssapi/_version.py

[coverage:html]
directory = coverage/

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    if __name__ == .__main__.:
    pass
include = httpx_gssapi/*,test_httpx_gssapi.py
omit = httpx_gssapi/_version.py

[build_sphinx]
source-dir = doc/
build-dir = doc/build/

[flake8]
max-line-length = 80
filename = httpx_gssapi/**.py
exclude =
    tests,
    build,
    dist,
    venv,
    .tox,
    *.egg*,
    coverage,
    doc,
    httpx_gssapi/_version.py

[tox:tox]
envlist = py36, py37, py38, py39, py310

[testenv]
deps =
    .
    pytest
    k5test
commands =
    python -m pytest

[versioneer]
VCS = git
style = pep440
versionfile_source = httpx_gssapi/_version.py
versionfile_build = httpx_gssapi/_version.py
tag_prefix = v
parentdir_prefix = httpx_gssapi-
